--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,8 @@ repositories {
 
 dependencies {
     implementation 'io.javalin:javalin:4.6.1'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
+    implementation 'org.slf4j:slf4j-api:1.8.0-beta4'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
