--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id "com.github.johnrengelman.shadow" version "7.1.2"
 }
 
 group 'org.example'
@@ -12,7 +13,7 @@ repositories {
 dependencies {
     implementation 'io.javalin:javalin:4.6.1'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
-    implementation 'org.slf4j:slf4j-api:1.8.0-beta4'
+    implementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.8.0-beta4'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
@@ -20,4 +21,17 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+ext {
+    javaMainClass = "org.example.Main"
+}
+
+shadowJar {
+    archiveBaseName.set("backend")
+    archiveClassifier.set("")
+    archiveVersion.set("")
+    mergeServiceFiles()
+
+    jar.manifest.attributes(["Main-Class": "${javaMainClass}"])
 }
